--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,72 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml">Chapter 1. The Séance</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml">Chapter 2. In the Street</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml">Chapter 3. Starkness</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml">Chapter 4. The Voice</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml">Chapter 5. The Night of Departure</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml">Chapter 6. Joiwind</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml">Chapter 7. Panawe</a>
+					<ol>
+						<li>
+							<a href="text/chapter-7.xhtml#panawes-story">Panawe’s Story</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml">Chapter 8. The Lusion Plain</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml">Chapter 9. Oceaxe</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml">Chapter 10. Tydomin</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml">Chapter 11. On Disscourn</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml">Chapter 12. Spadevil</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml">Chapter 13. The Wombflash Forest</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml">Chapter 14. Polecrab</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml">Chapter 15. Swaylone’s Island</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml">Chapter 16. Leehallfae</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml">Chapter 17. Corpang</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml">Chapter 18. Haunte</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml">Chapter 19. Sullenbode</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml">Chapter 20. Barey</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml">Chapter 21. Muspel</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +99,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">A Voyage to Arcturus</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
