--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,20 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">A Voyage to Arcturus</i><br/>
-			was published in YEAR by<br/>
+			was published in 1920 by<br/>
 			<a href="https://en.wikipedia.org/wiki/David_Lindsay">David Lindsay</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://librecron.com">Yuvraj Singh</a>,<br/>
 			and is based on a transcription produced in 1998 by<br/>
 			<b class="name">An Anonymous Volunteer</b>, and <b class="name">David Widger</b><br/>
 			for<br/>
-			<a href="https://www.gutenberg.org/ebooks/1329">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://www.gutenberg.org/ebooks/1329">Project Gutenberg</a><br/>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">The Giant with the Flaming Sword</i>,<br/>
+			a painting completed in 1909 by<br/>
+			<a href="https://en.wikipedia.org/wiki/en:John_Charles_Dollman">John Charles Dollman</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
