--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			and is based on a transcription produced in 1998 by<br/>
 			<b class="name">An Anonymous Volunteer</b>, and <b class="name">David Widger</b><br/>
 			for<br/>
-			<a href="https://www.gutenberg.org/ebooks/1329">Project Gutenberg</a><br/>.</p>
+			<a href="https://www.gutenberg.org/ebooks/1329">Project Gutenberg</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Giant with the Flaming Sword</i>,<br/>
 			a painting completed in 1909 by<br/>
@@ -31,7 +31,7 @@
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
-			<b>January 1, 1900, 12:00 <abbr class="time eoc">a.m.</abbr></b><br/>
+			<b>June 18, 2019, 1:14 <abbr class="time eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/david-lindsay/a-voyage-to-arcturus">standardebooks.org/ebooks/david-lindsay/a-voyage-to-arcturus</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
